test/libsolidity/syntaxTests/structs/recursion/return_recursive_structs.sol
contract C {
    struct S { uint a; S[] sub; }
    function f() public pure returns (uint, S) {
    }
}
// ----
// TypeError: Internal or recursive type is not allowed for public or external functions.
